fixed weather on mobile

--- a/client/src/styles/_live.scss
+++ b/client/src/styles/_live.scss
@@ -80,3 +80,20 @@
     }
   }
 }
+
+@media only screen and (max-width: 768px) {
+  #live {
+    .container {
+      .live {
+        flex-direction: column;
+        > div {
+          width: 100%;
+        }
+      }
+      .weather {
+        flex-direction: column;
+        width: 100%;
+      }
+    }
+  }
+}
